scrolling to pages

--- a/lang/ro.json
+++ b/lang/ro.json
@@ -184,5 +184,7 @@
     "from this classroom?": "din această clasă?",
     "users": "utilizatori",
     "Invalid email or password": "Email sau parolă invalidă",
-    "Back to home page": "Înapoi la pagina de start"
+    "Back to home page": "Înapoi la pagina de start",
+    "despre": "despre",
+    "contact": "contact"
 }
