--- a/lang/ro.json
+++ b/lang/ro.json
@@ -186,5 +186,8 @@
     "Invalid email or password": "Email sau parolă invalidă",
     "Back to home page": "Înapoi la pagina de start",
     "despre": "despre",
-    "contact": "contact"
+    "contact": "contact",
+    "VIAInfo Platform invitation": "Invitație Platforma VIAInfo",
+    "You have received an invitation for the VIAInfo website.": "Ai primit o invitație pentru website-ul VIAInfo.",
+    "Click on the link below to create an account:": "Apasă pe linkul de mai jos pentru a crea un cont:"
 }
