translated contact form submission

--- a/lang/ro.json
+++ b/lang/ro.json
@@ -189,5 +189,6 @@
     "contact": "contact",
     "VIAInfo Platform invitation": "Invitație Platforma VIAInfo",
     "You have received an invitation for the VIAInfo website.": "Ai primit o invitație pentru website-ul VIAInfo.",
-    "Click on the link below to create an account:": "Apasă pe linkul de mai jos pentru a crea un cont:"
+    "Click on the link below to create an account:": "Apasă pe linkul de mai jos pentru a crea un cont:",
+    "Contact submission created successfully": "Completarea formularului de contact a fost trimisă cu succes."
 }
